--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
    </div>  
    <div id="mainbody">   
      <div class="a3">
-        <h2 style="color:black;">We Are At The Heart Of Appropriate Care</h2>
+        <h2 style="color:black;">welcome</h2>
      </div>
    </div>  
 </body>    
