--- a/coach.html
+++ b/coach.html
@@ -129,7 +129,7 @@
   }
   // checking gender
   if (gender.gender.value === "") {
-    alert("Please dont ");
+    alert("Please dont sandra");
     
   }
  
