--- a/coach.html
+++ b/coach.html
@@ -124,7 +124,7 @@
   }
   // checking phone number
   if (!phoneNumber.value.match(/^[1-9][0-9]{9}$/)) {
-    alert("Phone number must be 10 characters long number and first digit can't be 0!");
+    alert(" 10 characters long number and first digit can't be 0!");
     
   }
   // checking gender
